fix: improve readablity on mobile

--- a/css/form.css
+++ b/css/form.css
@@ -77,7 +77,7 @@ body.alert #overlay {
 }
 
 #overlay #alert {
-  font-size: 1.15rem;
+  font-size: var(--input-text-size);
 }
 
 #overlay #blink {
